package com.lld.problems.library.code.constants;

public enum BookStatus {
    AVAILABLE,
    ALLOCATE,
    DAMAGE
}
