package com.lld.problems.library.code.constants;

public enum RentalType {
    SIT_IN,
    BORROW
}
